Changes for 3.2.4rc1

New features:

Bug fixes:
...G...PS. [ZBX-11101] fixed potential crash in case of failure in zbx_tls_connect() with mbed TLS (gleb)
...G...PS. [ZBX-11101] fixed compilation warnings regarding gnutls_transport_set_ptr() with GnuTLS (asaveljevs, gleb)
...G...PS. [ZBX-11101] fixed certificates with empty issuer and subject fields being rejected with OpenSSL (asaveljevs, gleb)
...G...PS. [ZBX-11101] fixed daemon behavior being affected by logging level when processing TLS connections (asaveljevs, gleb)

--------------------------------------------------------------------------------
Changes for 3.2.3

3.2.3rc2 was released as 3.2.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.3rc2

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-11613] fixed "Response time" graph on "Details of web scenario" page (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.3rc1

Bug fixes:
..F....... [ZBX-11596] fixed paging error in Configuration->Triggers and Monitoring->Web (Gunars)
.......PS. [ZBX-10983] fixed crash in IPMI poller, added deleting of inactive IPMI hosts in 'unreachable poller', improved code correctness and debug logging (Andris)
..F....... [ZBX-11354] fixed applications and application prototypes being reset in templated item prototypes when modifying its parent (Ivo)
..F....... [ZBXNEXT-3487] added vm.vmemory.size to active item helper, updated descriptions and sorted; thanks richlv for patch (vso)
...G...... [ZBX-11494] fixed "system.stat" returning not supported after Zabbix agent restart on AIX (viktors)
...G...... [ZBX-11479] fixed threaded metric to handle interruption by a signal (vso)