@@ -1413,6 +1413,7 @@ footer {
 	th {
 		color: $font-alt-color;
 		padding: 0 5px 0 0;
+		text-align: left;
 
 		&:last-child {
 			padding: 0;
